--- a/src/external-modules/EventEmitter/EventEmitter.csproj
+++ b/src/external-modules/EventEmitter/EventEmitter.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props"/>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.0" />
