--- a/src/external-modules/FileBox/FileBox.csproj
+++ b/src/external-modules/FileBox/FileBox.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props"/>
 
   <ItemGroup>
     <PackageReference Include="MimeMapping" Version="1.0.1.30" />
