--- a/src/external-modules/MemoryCard/MemoryCard.csproj
+++ b/src/external-modules/MemoryCard/MemoryCard.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props"/>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.111.27" />
