--- a/src/external-modules/ReactiveQueue/ReactiveQueue.csproj
+++ b/src/external-modules/ReactiveQueue/ReactiveQueue.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props"/>
 
   <ItemGroup>
     <PackageReference Include="System.Reactive" Version="4.4.1" />
