--- a/src/external-modules/Wechaty.Common/Wechaty.Common.csproj
+++ b/src/external-modules/Wechaty.Common/Wechaty.Common.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props"/>
 
   <ItemGroup>
     <Compile Remove="Common\**" />
