--- a/src/external-modules/Wechaty.Puppet.Hostie/Wechaty.Puppet.Hostie.csproj
+++ b/src/external-modules/Wechaty.Puppet.Hostie/Wechaty.Puppet.Hostie.csproj
@@ -3,5 +3,6 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props"/>
 
 </Project>
