--- a/src/external-modules/Wechaty.Puppet/Wechaty.Puppet.csproj
+++ b/src/external-modules/Wechaty.Puppet/Wechaty.Puppet.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  <Import Project="../../common.props"/>
+  
   <ItemGroup>
     <ProjectReference Include="..\EventEmitter\EventEmitter.csproj" />
     <ProjectReference Include="..\FileBox\FileBox.csproj" />
