--- a/src/Wechaty.Getting.Start/Wechaty.Getting.Start.csproj
+++ b/src/Wechaty.Getting.Start/Wechaty.Getting.Start.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\external-modules\Wechaty.Puppet.Hostie\Wechaty.Puppet.Hostie.csproj" />
     <ProjectReference Include="..\Wechaty\Wechaty.csproj" />
   </ItemGroup>
 
