add appsetting.json and update OnScan event

--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "Wechaty_Name": "",
-  "Wechaty_Token": "",
-  "Wechaty_EndPoint": ""
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "Wechaty_Name": "Demo",
+    "Wechaty_Token": "",
+    "Wechaty_EndPoint": ""
 }
