rock puppet service   support

--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -1,12 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "Wechaty_Name": "Demo",
-    "Wechaty_Token": "",
-    "Wechaty_EndPoint": ""
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "Wechaty_Name": "Demo",
+  "Wechaty_Puppet_providers": "wechaty-puppet-rock",
+  "Wechaty_Token": "",
+  "Wechaty_EndPoint": "114.215.83.32:7777"
 }
