Room->Add、Delete、 Find、 SetAnnounce、Say  test

--- a/src/Wechaty.Getting.Start/Wechaty.Getting.Start.csproj
+++ b/src/Wechaty.Getting.Start/Wechaty.Getting.Start.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="H:\git\github\wechaty\dotnet-wechaty-master\dotnet-wechaty\src\NullableAttributes.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.json" />
   </ItemGroup>
 
