Assembly name modification

--- a/src/external-modules/EventEmitter/EventEmitter.csproj
+++ b/src/external-modules/EventEmitter/EventEmitter.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Wechaty.EventEmitter</AssemblyName>
   </PropertyGroup>
-  <Import Project="../../common.props"/>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.0" />
