--- a/src/external-modules/ReactiveQueue/ReactiveQueue.csproj
+++ b/src/external-modules/ReactiveQueue/ReactiveQueue.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Wechaty.ReactiveQueue</AssemblyName>
   </PropertyGroup>
-  <Import Project="../../common.props"/>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="System.Reactive" Version="4.4.1" />
