--- a/src/external-modules/Watchdog/Watchdog.csproj
+++ b/src/external-modules/Watchdog/Watchdog.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Wechaty.Watchdog</AssemblyName>
   </PropertyGroup>
-  <Import Project="../../common.props"/>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
