add  nuget publish powshell  and update Project structure

--- a/src/Wechaty.Getting.Start/Properties/launchSettings.json
+++ b/src/Wechaty.Getting.Start/Properties/launchSettings.json
@@ -1,7 +1,11 @@
 {
   "profiles": {
     "Wechaty.Getting.Start": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "nativeDebugging": false
     }
   }
 }
