--- a/src/external-modules/Wechaty.EventEmitter/Wechaty.EventEmitter.csproj
+++ b/src/external-modules/Wechaty.EventEmitter/Wechaty.EventEmitter.csproj
@@ -3,11 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wechaty.EventEmitter</AssemblyName>
+    <PackageIcon>wechaty.png</PackageIcon>
+    <RootNamespace>EventEmitter</RootNamespace>
   </PropertyGroup>
   <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\docs\images\wechaty.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
