--- a/src/external-modules/Wechaty.Common/Wechaty.Common.csproj
+++ b/src/external-modules/Wechaty.Common/Wechaty.Common.csproj
@@ -2,13 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageIcon>wechaty.png</PackageIcon>
+    <RootNamespace>Wechaty</RootNamespace>
   </PropertyGroup>
-  <Import Project="../../common.props"/>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <Compile Remove="Common\**" />
     <EmbeddedResource Remove="Common\**" />
     <None Remove="Common\**" />
+    <None Include="..\..\..\docs\images\wechaty.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
