--- a/src/external-modules/Wechaty.FileBox/Wechaty.FileBox.csproj
+++ b/src/external-modules/Wechaty.FileBox/Wechaty.FileBox.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wechaty.FileBox</AssemblyName>
+    <PackageIcon>wechaty.png</PackageIcon>
+    <RootNamespace>Wechaty</RootNamespace>
   </PropertyGroup>
   <Import Project="../../common.props" />
 
@@ -10,6 +12,13 @@
     <PackageReference Include="MimeMapping" Version="1.0.1.30" />
     <PackageReference Include="QRCoder" Version="1.3.9" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\docs\images\wechaty.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
