--- a/src/external-modules/Wechaty.Watchdog/Wechaty.Watchdog.csproj
+++ b/src/external-modules/Wechaty.Watchdog/Wechaty.Watchdog.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wechaty.Watchdog</AssemblyName>
+    <PackageIcon>wechaty.png</PackageIcon>
   </PropertyGroup>
   <Import Project="../../common.props" />
 
@@ -11,8 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EventEmitter\EventEmitter.csproj" />
     <ProjectReference Include="..\Wechaty.Common\Wechaty.Common.csproj" />
+    <ProjectReference Include="..\Wechaty.EventEmitter\Wechaty.EventEmitter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\docs\images\wechaty.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
