update wechaty envirmonment variable

--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -6,8 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Wechaty_Name": "Demo",
-  "Wechaty_Puppet_providers": "wechaty-puppet-rock",
-  "Wechaty_Token": "",
-  "Wechaty_EndPoint": "114.215.83.32:7777"
+  "WECHATY_PUPPET": "wechaty-puppet-hostie",
+  "WECHATY_PUPPET_HOSTIE_TOKEN": ""
 }
