--- a/src/external-modules/Wechaty.FileBox/Wechaty.FileBox.csproj
+++ b/src/external-modules/Wechaty.FileBox/Wechaty.FileBox.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MimeMapping" Version="1.0.1.30" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="QRCoder" Version="1.3.9" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
