Wechaty.FileBox namespace update

--- a/src/external-modules/Wechaty.FileBox/Wechaty.FileBox.csproj
+++ b/src/external-modules/Wechaty.FileBox/Wechaty.FileBox.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wechaty.FileBox</AssemblyName>
-    <RootNamespace>Wechaty</RootNamespace>
+    <RootNamespace>Wechaty.FileBox</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
