--- a/src/external-modules/Wechaty.MemoryCard/Wechaty.MemoryCard.csproj
+++ b/src/external-modules/Wechaty.MemoryCard/Wechaty.MemoryCard.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Wechaty.MemoryCard</AssemblyName>
-    <RootNamespace>Wechaty</RootNamespace>
+    <RootNamespace>Wechaty.Memorycard</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
