Wechaty.Common  namespace update

--- a/src/external-modules/Wechaty.Common/Wechaty.Common.csproj
+++ b/src/external-modules/Wechaty.Common/Wechaty.Common.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wechaty.Common</AssemblyName>
-    <RootNamespace>Wechaty</RootNamespace>
+    <RootNamespace>Wechaty.Common</RootNamespace>
   </PropertyGroup>
   
 </Project>
