--- a/src/external-modules/Wechaty.ReactiveQueue/Wechaty.ReactiveQueue.csproj
+++ b/src/external-modules/Wechaty.ReactiveQueue/Wechaty.ReactiveQueue.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wechaty.ReactiveQueue</AssemblyName>
-    <RootNamespace>Wechaty</RootNamespace>
+    <RootNamespace>Wechaty.Reactivequeue</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
