--- a/src/external-modules/Wechaty.Puppet/Wechaty.Puppet.csproj
+++ b/src/external-modules/Wechaty.Puppet/Wechaty.Puppet.csproj
@@ -13,7 +13,7 @@
     <ProjectReference Include="..\Wechaty.FileBox\Wechaty.FileBox.csproj" />
     <ProjectReference Include="..\Wechaty.MemoryCard\Wechaty.MemoryCard.csproj" />
     <ProjectReference Include="..\Wechaty.ReactiveQueue\Wechaty.ReactiveQueue.csproj" />
-    <ProjectReference Include="..\Wechaty.Watchdog\Wechaty.Watchdog.csproj" />
+    <ProjectReference Include="..\Wechaty.Watchdog\Wechaty.WatchDog.csproj" />
   </ItemGroup>
 
 </Project>
