--- a/src/external-modules/Wechaty.Watchdog/Wechaty.Watchdog.csproj
+++ b/src/external-modules/Wechaty.Watchdog/Wechaty.Watchdog.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Wechaty.Watchdog</AssemblyName>
-    <RootNamespace>Wechaty</RootNamespace>
+    <AssemblyName>Wechaty.WatchDog</AssemblyName>
+    <RootNamespace>Wechaty.Watchdog</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
