--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "WECHATY_PUPPET": "wechaty-puppet-hostie",
-  "WECHATY_PUPPET_HOSTIE_TOKEN": "puppet_rock_4448d7e832fd436c9f2a1d33eea8e865"
+  "WECHATY_PUPPET_HOSTIE_TOKEN": ""
 }
