--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -54,7 +54,7 @@
   </ItemGroup>
   
    <!--Workaround for https://github.com/dotnet/sdk/issues/11105--> 
-  <ItemGroup>
+  <!--<ItemGroup>
     <SourceRoot Include="$(NuGetPackageRoot)" Condition="'$(NuGetPackageRoot)' != ''" />
-  </ItemGroup>
+  </ItemGroup>-->
 </Project>
