--- a/src/Wechaty.Getting.Start/Wechaty.Getting.Start.csproj
+++ b/src/Wechaty.Getting.Start/Wechaty.Getting.Start.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Plugins\Wechaty.Plugin.ScanEvent\Wechaty.Plugin.ScanEvent.csproj" />
+    <ProjectReference Include="..\Plugins\Wechaty.Plugin.Contrib\Wechaty.Plugin.Contrib.csproj" />
     <ProjectReference Include="..\Wechaty\Wechaty.csproj" />
   </ItemGroup>
 
