--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "WECHATY_PUPPET_SERVICE_TOKEN": ""
+  "WECHATY_PUPPET_SERVICE_TOKEN": "1821411b1a254ec199bb884f12f6d6bc",
+  "WECHATY_PUPPET_SERVICE_EndPoint": "127.0.0.1:9001"
 }
