--- a/src/modules/Wechaty.Module.Common/Wechaty.Module.Common.csproj
+++ b/src/modules/Wechaty.Module.Common/Wechaty.Module.Common.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.Common</AssemblyName>
     <RootNamespace>Wechaty.Module.Common</RootNamespace>
   </PropertyGroup>
