--- a/src/modules/Wechaty.Module.EventEmitter/Wechaty.Module.EventEmitter.csproj
+++ b/src/modules/Wechaty.Module.EventEmitter/Wechaty.Module.EventEmitter.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.EventEmitter</AssemblyName>
     <RootNamespace>Wechaty.Module.EventEmitter</RootNamespace>
   </PropertyGroup>
