--- a/src/modules/Wechaty.Module.FileBox/Wechaty.Module.FileBox.csproj
+++ b/src/modules/Wechaty.Module.FileBox/Wechaty.Module.FileBox.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.FileBox</AssemblyName>
     <RootNamespace>Wechaty.Module.Filebox</RootNamespace>
   </PropertyGroup>
