--- a/src/modules/Wechaty.Module.MemoryCard/Wechaty.Module.MemoryCard.csproj
+++ b/src/modules/Wechaty.Module.MemoryCard/Wechaty.Module.MemoryCard.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.MemoryCard</AssemblyName>
     <RootNamespace>Wechaty.Module.MemoryCard</RootNamespace>
   </PropertyGroup>
