--- a/src/modules/Wechaty.Module.Puppet/Wechaty.Module.Puppet.csproj
+++ b/src/modules/Wechaty.Module.Puppet/Wechaty.Module.Puppet.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.Puppet</AssemblyName>
     <RootNamespace>Wechaty.Module.Puppet</RootNamespace>
   </PropertyGroup>
