--- a/src/modules/Wechaty.Module.ReactiveQueue/Wechaty.Module.ReactiveQueue.csproj
+++ b/src/modules/Wechaty.Module.ReactiveQueue/Wechaty.Module.ReactiveQueue.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.ReactiveQueue</AssemblyName>
     <RootNamespace>Wechaty.Module.ReactiveQueue</RootNamespace>
   </PropertyGroup>
