--- a/src/modules/Wechaty.Module.Watchdog/Wechaty.Module.Watchdog.csproj
+++ b/src/modules/Wechaty.Module.Watchdog/Wechaty.Module.Watchdog.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Wechaty.Module.Watchdog</AssemblyName>
     <RootNamespace>Wechaty.Module.Watchdog</RootNamespace>
   </PropertyGroup>
