--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>8.0</LangVersion>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
@@ -33,7 +33,7 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
   <PropertyGroup>
-    <Version>0.1.6</Version>
+    <Version>0.2.0</Version>
   </PropertyGroup>
   <!--<ItemGroup>
     <None Include="$(SolutionDir)wechaty.png" Pack="true" PackagePath=""/>
@@ -53,8 +53,8 @@
     <EmbeddedFiles Include="$(GeneratedAssemblyInfoFile)"/>
     <EmbeddedFiles Include="$(TargetFrameworkMonikerAssemblyAttributesPath)"/>
   </ItemGroup>
-  
-   <!--Workaround for https://github.com/dotnet/sdk/issues/11105--> 
+
+  <!--Workaround for https://github.com/dotnet/sdk/issues/11105-->
   <ItemGroup>
     <SourceRoot Include="$(NuGetPackageRoot)" Condition="'$(NuGetPackageRoot)' != ''" />
   </ItemGroup>
