Both HTTP protocol and HTTPS protocol are supported

--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "WECHATY_PUPPET_SERVICE_TOKEN": "0c7b8f97-f3cc-40a5-a537-d492fd689801"
+  "WECHATY_PUPPET_SERVICE_TOKEN": "",
+  "WECHATY_PUPPET_SERVICE_Endpoint": ""
 }
