1、Wechaty.Grpc升级最到0.20.3版本 2、对应的PuppetService相关内容修改

--- a/src/Wechaty.Getting.Start/appsettings.json
+++ b/src/Wechaty.Getting.Start/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "WECHATY_PUPPET_SERVICE_TOKEN": "",
-  "WECHATY_PUPPET_SERVICE_Endpoint": ""
+  "WECHATY_PUPPET_SERVICE_Endpoint": "https://localhost:9002"
 }
