--- a/src/modules/Wechaty.Module.PuppetService/Wechaty.Module.PuppetService.csproj
+++ b/src/modules/Wechaty.Module.PuppetService/Wechaty.Module.PuppetService.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Wechaty.Grpc" Version="0.20.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.44.0" />
+    <PackageReference Include="Wechaty.Grpc" Version="0.20.3" />
   </ItemGroup>
 
   <ItemGroup>
